[gd_scene load_steps=34 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://WorldTiles/tileYellow_07.png" type="Texture" id=2]
[ext_resource path="res://WorldTiles/tileYellow_05.png" type="Texture" id=3]
[ext_resource path="res://WorldTiles/tileYellow_06.png" type="Texture" id=4]
[ext_resource path="res://SoundTracks/HateBit - Against the game (I hate this game OST).mp3" type="AudioStream" id=5]
[ext_resource path="res://Enemy.tscn" type="PackedScene" id=6]
[ext_resource path="res://CoinPanel.tscn" type="PackedScene" id=8]
[ext_resource path="res://Pause.tscn" type="PackedScene" id=9]
[ext_resource path="res://Coin.tscn" type="PackedScene" id=10]
[ext_resource path="res://SavePosition.tscn" type="PackedScene" id=12]
[ext_resource path="res://Upgrade.tscn" type="PackedScene" id=13]
[ext_resource path="res://Door.tscn" type="PackedScene" id=14]
[ext_resource path="res://WorldTileSet.tres" type="TileSet" id=15]
[ext_resource path="res://HUD/more fonts/Sniglet-Regular.ttf" type="DynamicFontData" id=16]
[ext_resource path="res://OneWayTiles.tres" type="TileSet" id=17]
[ext_resource path="res://items/Spike.png" type="Texture" id=18]
[ext_resource path="res://WorldTiles/ladder_top.png" type="Texture" id=19]
[ext_resource path="res://background/set2_background.png" type="Texture" id=20]
[ext_resource path="res://background/set2_tiles.png" type="Texture" id=21]
[ext_resource path="res://WorldTiles/ladder_mid.png" type="Texture" id=22]
[ext_resource path="res://Level0.gd" type="Script" id=23]
[ext_resource path="res://Player.tscn" type="PackedScene" id=24]

[sub_resource type="ConvexPolygonShape2D" id=30]
points = PoolVector2Array( 32, 0, 0, 64, 0, 64, 64, 64 )

[sub_resource type="TileSet" id=36]
0/name = "Spike.png 0"
0/texture = ExtResource( 18 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 30 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 30 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="ConvexPolygonShape2D" id=31]
points = PoolVector2Array( 64, 0, 0, 0, 0, 24, 64, 24 )

[sub_resource type="ConvexPolygonShape2D" id=32]
points = PoolVector2Array( 64, 24, 0, 24, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=33]
points = PoolVector2Array( 64, 24, 0, 24, 0, 0, 64, 0 )

[sub_resource type="TileSet" id=37]
0/name = "tileYellow_06.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 31 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 31 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "tileYellow_05.png 1"
1/texture = ExtResource( 3 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 32 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 32 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "tileYellow_07.png 2"
2/texture = ExtResource( 2 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 33 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 33 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0

[sub_resource type="ConvexPolygonShape2D" id=34]
points = PoolVector2Array( 64, 64, 0, 64, 8, 0, 56, 0 )

[sub_resource type="ConvexPolygonShape2D" id=35]
points = PoolVector2Array( 64, 64, 0, 64, 8, 8, 56, 8 )

[sub_resource type="TileSet" id=38]
0/name = "ladder_mid.png 0"
0/texture = ExtResource( 22 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 34 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 34 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "ladder_top.png 1"
1/texture = ExtResource( 19 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 35 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 35 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0

[sub_resource type="RectangleShape2D" id=39]
extents = Vector2( 1e+06, 8 )

[sub_resource type="DynamicFont" id=40]
size = 32
font_data = ExtResource( 16 )

[node name="Level0" type="Node2D"]
script = ExtResource( 23 )

[node name="Node2D" type="Node2D" parent="."]

[node name="ParallaxBackground" type="ParallaxBackground" parent="Node2D"]

[node name="PurpleSky" type="ParallaxLayer" parent="Node2D/ParallaxBackground"]
motion_mirroring = Vector2( 1280, 960 )

[node name="Sprite" type="Sprite" parent="Node2D/ParallaxBackground/PurpleSky"]
position = Vector2( -320, -32 )
scale = Vector2( 3, 3 )
texture = ExtResource( 20 )
centered = false

[node name="BackBlocks" type="ParallaxLayer" parent="Node2D/ParallaxBackground"]
modulate = Color( 0.752941, 0.454902, 0.886275, 0.239216 )
position = Vector2( 0, -800 )
motion_scale = Vector2( 0.2, 0.2 )
motion_mirroring = Vector2( 2560, 1920 )

[node name="Sprite" type="Sprite" parent="Node2D/ParallaxBackground/BackBlocks"]
scale = Vector2( 4, 4 )
texture = ExtResource( 21 )
centered = false

[node name="MiddleBlocks" type="ParallaxLayer" parent="Node2D/ParallaxBackground"]
modulate = Color( 0.898039, 0.858824, 0.945098, 1 )
position = Vector2( 0, -500 )
motion_scale = Vector2( 0.4, 0.4 )
motion_mirroring = Vector2( 1600, 1200 )

[node name="Sprite" type="Sprite" parent="Node2D/ParallaxBackground/MiddleBlocks"]
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 21 )
centered = false

[node name="FrontBlocks" type="ParallaxLayer" parent="Node2D/ParallaxBackground"]
motion_scale = Vector2( 0.6, 0.6 )
motion_mirroring = Vector2( 1120, 840 )

[node name="Sprite" type="Sprite" parent="Node2D/ParallaxBackground/FrontBlocks"]
scale = Vector2( 1.75, 1.75 )
texture = ExtResource( 21 )
centered = false

[node name="TileMaps" type="Node2D" parent="Node2D"]

[node name="OneWayTiles" type="TileMap" parent="Node2D/TileMaps" groups=["OneWay", "Plats"]]
tile_set = ExtResource( 17 )
collision_layer = 2
collision_mask = 433
format = 1
tile_data = PoolIntArray( -2097097, 2, 0, -2097096, 4, 0, -2097095, 4, 0, -2097094, 4, 0, -2097093, 4, 0, -2097092, 4, 0, -2097091, 3, 0, -2097083, 4, 0, -2031560, 5, 0, -2031559, 5, 0, -2031558, 5, 0, -2031557, 5, 0, -2031556, 5, 0, -1966024, 5, 0, -1966023, 5, 0, -1966022, 5, 0, -1966021, 5, 0, -1966020, 5, 0, -1900488, 5, 0, -1900487, 5, 0, -1900486, 5, 0, -1900485, 5, 0, -1900484, 5, 0, -1834952, 5, 0, -1834951, 5, 0, -1834950, 5, 0, -1834949, 5, 0, -1834948, 5, 0, -1769416, 5, 0, -1769415, 5, 0, -1769414, 5, 0, -1769413, 5, 0, -1769412, 5, 0, -1703880, 5, 0, -1703879, 5, 0, -1703878, 5, 0, -1703877, 5, 0, -1703876, 5, 0, -1638344, 5, 0, -1638343, 5, 0, -1638342, 5, 0, -1638341, 5, 0, -1638340, 5, 0, -1572808, 5, 0, -1572807, 5, 0, -1572806, 5, 0, -1572805, 5, 0, -1572804, 5, 0, -1507272, 5, 0, -1507271, 5, 0, -1507270, 5, 0, -1507269, 5, 0, -1507268, 5, 0, -1441736, 5, 0, -1441735, 5, 0, -1441734, 5, 0, -1441733, 5, 0, -1441732, 5, 0, -1310645, 4, 0, -982992, 4, 0, -982977, 4, 0, -982976, 4, 0, -982974, 4, 0, -982973, 4, 0, -917441, 5, 0, -917440, 5, 0, -917439, 5, 0, -917438, 5, 0, -917437, 5, 0, -851905, 5, 0, -851904, 5, 0, -851903, 5, 0, -851902, 5, 0, -851901, 5, 0, -786369, 5, 0, -786368, 5, 0, -786367, 5, 0, -786366, 5, 0, -786365, 5, 0 )

[node name="Spikes" type="TileMap" parent="Node2D/TileMaps" groups=["Spikes"]]
tile_set = SubResource( 36 )
cell_size = Vector2( 16, 16 )
centered_textures = true
collision_layer = 16
collision_mask = 0
format = 1
tile_data = PoolIntArray( -6881035, 0, 0, -6881032, 0, 0, -6881029, 0, 0, -6881027, 0, 0, -6881025, 0, 0, -6881023, 0, 0, -6881020, 0, 0, -6881017, 0, 0, -6881015, 0, 0, -6881013, 0, 0, -6881010, 0, 0, -6881007, 0, 0, -6881004, 0, 0, -6881001, 0, 0, -6880998, 0, 0, -6880995, 0, 0, -6880992, 0, 0, -6815514, 0, 0, -6815512, 0, 0, -6815510, 0, 0, -6815508, 0, 0, -6815506, 0, 0 )

[node name="AttacheablePlats" type="TileMap" parent="Node2D/TileMaps" groups=["Plats"]]
tile_set = SubResource( 37 )
collision_layer = 258
format = 1

[node name="Ladders" type="TileMap" parent="Node2D/TileMaps"]
tile_set = SubResource( 38 )
collision_layer = 512
collision_mask = 0
format = 1
tile_data = PoolIntArray( -2359249, 1, 0, -2293713, 0, 0, -2228177, 0, 0, -2162641, 0, 0, -2097105, 0, 0, -2097083, 1, 0, -2031547, 0, 0, -1966011, 0, 0, -1900475, 0, 0, -1834948, 0, 0, -1834939, 0, 0, -1769416, 0, 0, -1769412, 0, 0, -1703880, 0, 0, -1638344, 0, 0, -1572804, 0, 0, -1507268, 0, 0, -1507262, 0, 0, -1441726, 0, 0, -1310645, 1, 0, -1245109, 0, 0, -1179573, 0, 0, -1114037, 0, 0, -982992, 1, 0, -982973, 1, 0, -917456, 0, 0, -917437, 0, 0, -851920, 0, 0, -786384, 0, 0, -720848, 0, 0, -655312, 0, 0 )

[node name="TileMap" type="TileMap" parent="Node2D/TileMaps" groups=["Plats"]]
tile_set = ExtResource( 15 )
show_collision = true
collision_layer = 2
collision_mask = 177
format = 1
tile_data = PoolIntArray( -2359249, 4, 0, -2162658, 10, 0, -2162657, 18, 0, -2162656, 18, 0, -2162655, 18, 0, -2162654, 18, 0, -2162653, 18, 0, -2162652, 18, 0, -2162651, 18, 0, -2162650, 18, 0, -2162649, 11, 0, -2097084, 10, 0, -2097082, 11, 0, -2031599, 10, 0, -2031598, 18, 0, -2031597, 18, 0, -2031596, 18, 0, -2031595, 18, 0, -2031594, 18, 0, -2031593, 11, 0, -1703879, 4, 0, -1703878, 4, 0, -1703877, 4, 0, -1703876, 4, 0, -1703875, 4, 0, -1703874, 4, 0, -1703873, 4, 0, -1703872, 4, 0, -1703871, 4, 0, -1703870, 4, 0, -1703869, 4, 0, -1703868, 4, 0, -1703867, 4, 0, -1703866, 4, 0, -1703865, 4, 0, -1703864, 4, 0, -1507263, 4, 0, -1441727, 4, 0, -1376191, 4, 0, -1310655, 4, 0, -1310648, 10, 0, -1310647, 18, 0, -1310646, 18, 0, -1310644, 18, 0, -1310643, 18, 0, -1310642, 11, 0, -1245119, 4, 0, -1179583, 4, 0, -1114047, 4, 0, -1048511, 4, 0, -982997, 10, 0, -982996, 18, 0, -982995, 18, 0, -982994, 18, 0, -982993, 18, 0, -982991, 18, 0, -982990, 18, 0, -982989, 18, 0, -982988, 11, 0, -982978, 12, 0, -982975, 18, 0, -982972, 13, 0, -720834, 12, 0, -720833, 18, 0, -720832, 18, 0, -720831, 18, 0, -720830, 18, 0, -720829, 18, 0, -720828, 13, 0, -589783, 10, 0, -589782, 18, 0, -589781, 18, 0, -589780, 18, 0, -589779, 18, 0, -589778, 18, 0, -589777, 18, 0, -589776, 18, 0, -589775, 11, 0, -458727, 10, 0, -458726, 18, 0, -458725, 18, 0, -458724, 18, 0, -458723, 18, 0, -458722, 18, 0, -458721, 18, 0, -458720, 11, 0, -327672, 10, 0, -327671, 18, 0, -327670, 18, 0, -327669, 18, 0, -327668, 18, 0, -327667, 18, 0, -327666, 18, 0, -327665, 18, 0, -327664, 18, 0, -327663, 18, 0, -327662, 18, 0, -327661, 18, 0, -327660, 18, 0, -327659, 11, 0 )

[node name="Door" parent="Node2D" instance=ExtResource( 14 )]
position = Vector2( 1181.6, -2085.21 )

[node name="Upgrade2" parent="Node2D" groups=["health_upgrade"] instance=ExtResource( 13 )]
position = Vector2( -1484.64, 2096.74 )

[node name="Enemy3" parent="Node2D" instance=ExtResource( 6 )]
position = Vector2( 2461.4, -2137.66 )

[node name="HUD" type="CanvasLayer" parent="Node2D"]
script = ExtResource( 1 )

[node name="CoinPanel" parent="Node2D/HUD" instance=ExtResource( 8 )]

[node name="Pause" parent="Node2D/HUD" instance=ExtResource( 9 )]
visible = false

[node name="Coin" parent="Node2D" instance=ExtResource( 10 )]
position = Vector2( 3745.2, -2141.3 )
collision_layer = 8

[node name="FallZone" type="Area2D" parent="Node2D"]
position = Vector2( -96, 1664.04 )
collision_layer = 4
collision_mask = 17
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/FallZone"]
position = Vector2( 111.177, 0 )
shape = SubResource( 39 )

[node name="Player" parent="Node2D" instance=ExtResource( 24 )]
position = Vector2( 742.723, -386.625 )
__meta__ = {
"_edit_group_": true
}

[node name="Camera2D2" type="Camera2D" parent="Node2D/Player"]
current = true
limit_bottom = 3000
drag_margin_h_enabled = true
drag_margin_v_enabled = true
editor_draw_limits = true

[node name="Control" type="Control" parent="Node2D"]
margin_left = 914.895
margin_top = -554.992
margin_right = 1065.9
margin_bottom = -406.992

[node name="Label" type="Label" parent="Node2D/Control"]
margin_left = -400.267
margin_top = 10.0908
margin_right = -219.267
margin_bottom = 118.091
custom_fonts/font = SubResource( 40 )
text = "Press A & D
To move"

[node name="Label2" type="Label" parent="Node2D/Control"]
margin_left = 312.813
margin_top = 23.5451
margin_right = 493.813
margin_bottom = 131.545
custom_fonts/font = SubResource( 40 )
text = "Space to Jump"

[node name="Label3" type="Label" parent="Node2D/Control"]
margin_left = 797.037
margin_top = -111.309
margin_right = 1216.04
margin_bottom = -16.3086
custom_fonts/font = SubResource( 40 )
text = "Shift to Dash
Can be performed only midair"
align = 1
valign = 1

[node name="Label4" type="Label" parent="Node2D/Control"]
margin_left = 1822.71
margin_top = -194.634
margin_right = 2034.71
margin_bottom = -99.6343
custom_fonts/font = SubResource( 40 )
text = "Use W & S to move
up or down
on a ladder"
align = 1
valign = 1

[node name="Label5" type="Label" parent="Node2D/Control"]
margin_left = 3144.33
margin_top = -298.327
margin_right = 3412.33
margin_bottom = -169.327
custom_fonts/font = SubResource( 40 )
text = "Press S to go down
a platform"
align = 1
valign = 1

[node name="Label6" type="Label" parent="Node2D/Control"]
margin_left = 2666.45
margin_top = -923.032
margin_right = 2934.45
margin_bottom = -794.032
custom_fonts/font = SubResource( 40 )
text = "Space to jump off 
a ladder"
align = 1
valign = 1

[node name="Label7" type="Label" parent="Node2D/Control"]
margin_left = 2687.81
margin_top = -1926.83
margin_right = 3005.81
margin_bottom = -1709.83
custom_fonts/font = SubResource( 40 )
text = "Coins are the currecny
that allows you to move
onto a next level
They are also your
personal score"
align = 1
valign = 1

[node name="Label8" type="Label" parent="Node2D/Control"]
margin_left = 1309.03
margin_top = -1824.98
margin_right = 1637.03
margin_bottom = -1718.98
custom_fonts/font = SubResource( 40 )
text = "Jump on top of the
enemy to get rid of him"
align = 1
valign = 1

[node name="Label9" type="Label" parent="Node2D/Control"]
margin_left = 339.828
margin_top = -1769.04
margin_right = 766.828
margin_bottom = -1508.04
custom_fonts/font = SubResource( 40 )
text = "Press E to interact with a door

You need to collect 
a required amount
of coins to be able
to go to a next level"
align = 1
valign = 1

[node name="SavePoints" type="Node2D" parent="Node2D"]

[node name="SavePoint" parent="Node2D/SavePoints" instance=ExtResource( 12 )]
position = Vector2( 744.891, -314.018 )

[node name="SavePoint2" parent="Node2D/SavePoints" instance=ExtResource( 12 )]
position = Vector2( 2811.16, -573.562 )
scale = Vector2( 2, 1 )

[node name="SavePoint3" parent="Node2D/SavePoints" instance=ExtResource( 12 )]
position = Vector2( 3257.17, -951.538 )
scale = Vector2( 2, 1 )

[node name="SavePoint4" parent="Node2D/SavePoints" instance=ExtResource( 12 )]
position = Vector2( 4219.75, -689.474 )
scale = Vector2( 2, 1 )

[node name="SavePoint5" parent="Node2D/SavePoints" instance=ExtResource( 12 )]
position = Vector2( 3814.06, -2040.11 )
scale = Vector2( 2, 1 )

[node name="SavePoint6" parent="Node2D/SavePoints" instance=ExtResource( 12 )]
position = Vector2( 1392.49, -1974.59 )
scale = Vector2( 2, 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true

[connection signal="KnockBack" from="Node2D/Enemy3" to="Node2D/Player" method="_on_Enemy_KnockBack"]
[connection signal="Coin_collected" from="Node2D/Coin" to="Node2D/HUD" method="_on_Coin_collected" flags=6]
[connection signal="body_entered" from="Node2D/FallZone" to="." method="_on_FallZone_body_entered"]
[connection signal="DoorOpened" from="Node2D/Player" to="." method="_on_Player_DoorOpened"]
